EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==07/14/2009==
WildcardX: (for BOTS alpha code only) Set textures to 0 to create the correct appearance of a naked bot on spawn without any equipment.

==07/13/2009==
KLS: Reimplemented pet hate scaling.
KLS: Removed code that ports you if you're found warping.
WildcardX: (for BOTS alpha code only) Inviting a bot to group will show the bot name without any numeric characters (ie, mob::cleanname()).
WildcardX: (for BOTS alpha code only) Detecting pacified mobs via spell effect type instead of specific spell id's.

==07/12/2009==
Trevius: Added "featuresave" option to #npcedit that will save all currently set facial features.
Trevius: Fixed crash for #randomfeatures if no target was selected before using it.
Congdar: Fix EQBOTS AISpells break. Add new rules, features too much to list.
KLS: Upped default monk melee damage, halved default monk special attack damage by a little over half.

SQL: /utils/sql/svn/773_monk_rules.sql

==07/11/2009==
KLS: SoF - Changed raid join packet encode slightly.
KLS: SoF - Added workaround for disconnection on death for now.
WildcardX: Fixed BOTS so the bot doesn't warp to its owner.
WildcardX: All commands for the BOTS system can be tested now except for bot raiding and bot group raiding.

==07/10/2009==
Trevius: (Zeice) Added #mystats command as an alternative to #showstats that only shows stats for the client or it's own pet.
WildcardX: Migrated more code from EQBOTS to BOTS. The BOT code is less buggy than last iteration and now has even more active features that can be tested but there is a known issue or two I am aware of and working to correct.
KLS: Fix for fear not wearing off properly.
KLS: Small tweaks to npc spell ai.
KLS: SoF - Raids should now function properly.

==07/09/2009==